variables.RunFour.scala.error
Erreur de compilation :
RunFour:-7: error: Unmatched closing brace '}' ignored here
	}
        ^RunFour:-6: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^RunFour:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^